# brewnote

./: Cargo.toml
src/: main.rs  model.sql  models.rs  user.rs
templates/: brew.hbs  index.hbs  login.hbs
